--- a/src/styles/AnnouncementList.css
+++ b/src/styles/AnnouncementList.css
@@ -22,16 +22,25 @@
   justify-content: space-between;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   opacity: 0.8;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: pre-wrap;
 }
 
 .announcement-card h3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin-top: 0;
   margin-bottom: 5px;
 }
 
 .announcement-card p.description {
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* Ograniczenie do 3 linii */
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
